# KiMecO

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANUAL.md  README.md  __init__.py  kmo_install_test.sh  meta.yaml  pyproject.toml  requirements.txt  setup.py  sop.out  sqlalchemy.ipynb
.github/: AGENTS.md
.github/agents/: ci-test.agent.md  coordinator.agent.md  database.agent.md  execution-pipeline.agent.md  experience-data-lead.agent.md  experiment.agent.md  gui.agent.md  hpc.agent.md  input-config.agent.md  input-settings.agent.md  mechanism-sop.agent.md  model.agent.md  optimization.agent.md  optimizer.agent.md  persistence-ui-postprocess.agent.md  root-coordinator.agent.md  run-orchestration.agent.md  runtime-lead.agent.md  scheduler-simulation.agent.md  set-of-parameters.agent.md  version-control.agent.md
.github/workflows/: publish-wiki.yml  tests.yml
.ipynb_checkpoints/: sqlalchemy-checkpoint.ipynb
LICENSES/: Automech_LICENSE  CANTERA_LICENSE  KiMecO_LICENSE
conda-recipes/mess-static/: build.sh  meta.yaml
example/: README.md  concentration_time_isobar_adiabatic.tpl  ep1t1.csv  ep1t2.csv  ep1t3.csv  ep2t1.csv  ep2t2.csv  ep2t3.csv  ep3t1.csv  ep3t2.csv  ep3t3.csv  ep4t1.csv  ep4t2.csv  ep4t3.csv  input.json  mess_input_ethyl_oxidation.aux  mess_input_ethyl_oxidation.inp  mess_input_ethyl_oxidation.out  p1t1.csv  p1t2.csv  p1t3.csv  p2t1.csv  p2t2.csv  p2t3.csv  p3t1.csv  p3t2.csv  p3t3.csv  p4t1.csv  p4t2.csv  p4t3.csv  submit_kmo.slurm
game/: barrier.py  bimolecular.py  core.py  ct_job.py  customrate.py  default_settings.py  element.py  game_db.py  generation.py  glogger.py  gui.py  kinetic_constants.py  logger_config.py  main.py  parameters.py  perturbator.py  q_sys.py  rate_coef.py  rate_constants.py  rotor.py  simulation.py  structure.py  test.py  test_gui.py  test_sop_gui.py  user_input.py  well.py
game.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
game.egg-info/.ipynb_checkpoints/: SOURCES-checkpoint.txt  requires-checkpoint.txt
game/GeneticAlgo/: ga.py  tournament.py
hooks/: pre-commit  pre-push  run_tests.sh
kimeco/: __init__.py  _kimeco.py  barrier.py  bimolecular.py  core.py  default_settings.py  element.py  enums.py  generation.py  goat.py  kinmec.py  logger_config.py  main.py  model.py  parameter_scoring.py  parameters.py  q_sys.py  rate_coef.py  simulation.py  user_input.py  well.py
kimeco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: ThInK_Mech.yaml  test_mess_io_multi_input.py
wiki/: Additional-Global-Keywords.md  Extra-Notes.md  Getting-Started.md  Home.md  Installation-from-Source.md  Mandatory-Keywords.md  Optimizer.md  Outputs.md  Postprocessing.md  Resources.md  Sensitivity-Analysis.md  Theoretical-Uncertainties.md  _Sidebar.md
(+164 files in other folders)
