[build-system]
requires = ["setuptools>=61.0",
            "ase>=3.22.1",
            "cantera>=3.0.0",
            "numpy>=1.22.4",
            "pandas>=2.2",
            "sqlalchemy",
            "sqlalchemy-utils",
            "dash"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "dist", "game.egg-info"]

[project]
name = "game"
version = "0.0.1"
authors = [
  { name="Clement Soulie", email="csoulie@sandia.gov" }
]
maintainers = [
  { name="Clement Soulie", email="csoulie@sandia.gov" }
]
description = "GAME"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry"
]

[project.scripts]
game = "game.main:main"
gameUI = "game.gui.gameapp:main"