[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "dist", "kimeco.egg-info"]

[project]
name = "kimeco"
version = "0.0.2"
authors = [
  { name="Clement Soulie", email="csoulie@sandia.gov" }
]
maintainers = [
  { name="Clement Soulie", email="csoulie@sandia.gov" }
]
description = "KIMECO"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
    "ase>=3.22.1",
    "cantera>=3.0.0",
    "numpy>=2",
    "pandas>=2.2",
    "sqlalchemy",
    "sqlalchemy-utils",
    "dash",
    "scipy>=1.10",
  "plotly>=5",
  "pint",
  "pyarrow>=14"
]

[project.optional-dependencies]
test = ["pytest>=9.0.2"]

[project.scripts]
kmo = "kimeco.main:main"
kmoui = "kimeco.gui.kimecoapp:main"
kmopp = "kimeco.postprocessing.postprocess:main"